# nixos-dotfiles

./: .gitmodules  README.org  default.nix  flake.nix  shell.nix
.config/alacritty/: alacritty  alacritty.yml  solarized_dark.yaml
.config/dmenu/: config.h
.config/doom/: config.el  config.org  custom.el  init.el  packages.el
.config/qtile/: '  autostart.sh  config.py  widgets.py
.config/shell/: nixos_profile  profile
.config/slock/: config.h  config.h.orig  config.h.rej  config.mk.rej  slock.c  slock.c.orig
.config/x11/: xinitrc  xprofile  xresources
.config/zathura/: kaolin-aurora  zathurarc
.config/zsh/: .zcompdump  .zcompdump-mzanicACER-5.8  .zshrc
config/alacritty/: alacritty.yml
config/bspwm/: bspwmrc
config/compton/: compton.conf
config/dmenu/: config.def.h
config/doom/: +exwm.el  config.el  config.org  custom.el  init.el  packages.el  polybar.org
config/dunst/: dunstrc
config/emacs/: emacs-profiles.el
config/i3/: config
config/modprobe/: alsa-base.conf
config/nvim/: init.lua
config/qtile/: autostart.sh  (+1 more)
config/xmonad/: flake.nix  mzanic-xmonad.cabal  xmonad.errors  xmonad.hs
config/xmonad/lib/Config/: Colors.hs  KaolinAurora.hs  Keys.hs  Layouts.hs  ManageHook.hs  Prompt.hs  Scratchpad.hs  StartupHook.hs  StatusBar.hs  Utils.hs  Vars.hs  Xresources.hs  XresourcesColors.hs
config/xmonad/xpm/: bat.xpm  calendar-clock-icon_20.xpm  cpu_20.xpm  harddisk-icon_20.xpm  memory-icon_20.xpm  music.xpm  net_down_20.xpm  pacman.xpm
modules/: agenix.nix  options.nix  xdg.nix
overlays/: default.nix
shells/: python_gcp_dev.nix
(+78 files in other folders)
