cabal-version:      2.4
name:               mzanic-xmonad
version:            0.1.0.0

common common
  default-language:      Haskell2010
  default-extensions:
    LambdaCase
  ghc-options:
    -Wall

library
    hs-source-dirs: lib
    exposed-modules:
        Config
        Config.Colors
        Config.Vars
        Config.Keys
        Config.Layouts
        Config.StartupHook
        Config.ManageHook
        Config.StatusBar
    build-depends:
        base,
        xmonad,
        xmonad-contrib,
        X11,
        containers,
        utf8-string,


executable mzanic-xmonad
    import:           common
    main-is:          xmonad.hs
    build-depends:
        base,
        xmonad,
        xmonad-contrib,
        X11,
        containers,
        utf8-string,
